Increase heap size for tests